--- a/src/components/styles/Header.scss
+++ b/src/components/styles/Header.scss
@@ -7,7 +7,7 @@
 }
 
 .header__logo {
-  margin-left: 4rem;
+  margin-left: 25rem;
 }
 
 .navbar {
@@ -18,7 +18,7 @@ ul {
   display: flex;
   li {
     list-style: none;
-    margin: 1rem;
+    margin: 1.2rem;
     a {
       text-decoration: none;
       text-transform: uppercase;
@@ -43,5 +43,73 @@ ul {
 .closed {
   .close {
     display: none;
+  }
+}
+
+@media (max-width: 800px) {
+  .header {
+    justify-content: space-between;
+  }
+  .navbar {
+    display: none;
+    transition: 1s ease;
+    .active {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      position: fixed;
+      inset: 0;
+      background: white;
+      transition: 1400ms ease;
+    }
+  }
+  ul {
+    margin: 0 auto;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 1rem;
+    li {
+      margin-block: 2rem;
+      a {
+        font-size: 20px;
+        color: #020202;
+        font-weight: bolder;
+      }
+    }
+  }
+  .change {
+    .menu {
+      display: block;
+    }
+  }
+  .closed {
+    .close {
+      display: block;
+    }
+    .header__logo {
+      margin-left: 0.4rem;
+    }
+  }
+}
+
+@media (max-width: 350px) {
+  ul {
+    margin: 0 auto;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 1rem;
+    li {
+      margin-block: 2rem;
+      a {
+        font-size: 20px;
+        color: #020202;
+        font-weight: bolder;
+      }
+    }
+  }
+  .change {
+    .menu {
+      display: block;
+    }
   }
 }
